# Risk-Aware-Relational-Spectral-Recovery-under-Partial-Quantum-Observability

./: .gitignore  CITATION.cff  README.md  analyze_recovery_failure_linkage.py  make_paper_figures.py  prepare_hf_dataset.py  pyproject.toml  requirements.txt
biqmn/: __init__.py
biqmn/baselines/: __init__.py  syndrome_recovery.py
biqmn/core/: __init__.py  admissibility.py  clock.py  clock_consistency.py  encoding.py  global_state.py  graph_mapping.py  hamiltonian.py  laplacian.py  metrics.py  noise.py  recovery.py  relative_state.py  simulator.py  spectral_density.py  trajectory.py
biqmn/experiments/: __init__.py  coherent_veto_common.py  common.py  rebuild_c3r_results.py  run_admissible_projection.py  run_ambiguity_measurement_syndrome_regime_map.py  run_c2_preferred_analysis.py  run_clock_consistency.py  run_coherent_casebook.py  run_coherent_threshold_sweep.py  run_coherent_v1_baseline.py  run_coherent_veto_analysis.py  run_coherent_veto_threshold_sweep.py  run_detection_metrics.py  run_encoded_casebook.py  run_encoded_qec_baseline.py  run_encoded_regime_map.py  run_hybrid_c123_baseline.py  run_hybrid_c123_casebook.py  run_hybrid_c123_regime_map.py  run_noise_trajectory.py  run_noisy_syndrome_baseline.py  run_partial_noisy_syndrome_regime_map.py  run_partial_syndrome_baseline.py  run_random_noise_baseline.py  run_recovery_ablation.py  run_recovery_objective.py  run_recovery_sweep.py  run_ref_anchor_validation.py  (+2 more)
configs/: default.yaml
scripts/: rebuild_c3r_results.ps1  run_c3r_seed10.ps1
tests/: test_experiment_smoke.py  test_theory_alignment.py
(+34 files in other folders)
