[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biqmn"
version = "0.1.0"
description = "Relational spectral recovery experiments for partially observable qubit networks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "PyYAML>=6.0",
  "qiskit>=2.3",
  "qiskit-aer>=0.17",
  "matplotlib>=3.7",
  "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["biqmn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
